# tree-sitter-kolibri

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  minimal_test.k  minimal_test2.k  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-kolibri.pc.in
bindings/c/tree_sitter/: tree-sitter-kolibri.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kolibri/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKolibriTests/: TreeSitterKolibriTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
