[package]
name = "tree-sitter-kolibri"
description = "Kolibri programming language non-generalized parser"
version = "0.1.0"
authors = ["qwivet <qwivet@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kolibri"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/qwivet/tree-sitter-kolibri.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
